kubernetes/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: jticket
  labels:
    name: jticket
