kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jticket
  namespace: jticket
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jticket
  template:
    metadata:
      name: jticket
      labels:
        app: jticket
    spec:
      containers:
        - name: jticket
          image: jticket/jticket-service:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
        - name: cockroachdb
          image: cockroachdb/cockroach:v24.3.33
          ports:
            - containerPort: 26257  # CockroachDB SQL port
            - containerPort: 8080   # CockroachDB Admin UI port
          args:
            - start
            - --insecure
            - --store=type=mem,size=512Mi   # In-memory configuration
            - --join=jticket-db             # Use the headless service for node discovery    
      restartPolicy: Always
