kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jticket
  namespace: jticket
spec:
  selector:
    app: jticket
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
