kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jticket
  namespace: jticket
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "http"
spec:
  ingressClassName: nginx-ingress-intranet
  tls:
    - hosts:
        - "intra.jticket.io"
        - "*.intra.jticket.io"
    - secretName: intra.jticket.io
  rules:
    - host: service.intra.jticket.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jticket
                port:
                  number: 80
